--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,10 +12,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <div class="row">
+      <div class="input-field col s12">
+        <%= f.label :title %><br>
+        <%= f.text_field :title %>
+      </div>
+    </div>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn waves-effect waves-light' %>
   </div>
 <% end %>
