--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+<br>
+<%= link_to '<i class="material-icons left">arrow_back</i>Back to posts'.html_safe, posts_path, class: 'btn blue darken-2 waves-effect waves-light'  %>
