--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
+  <h1><%= @post.title %></h1>
+  <p>
+    Created: <%= @post.created_at %> <br>
+    Updated: <%= @post.updated_at %>
+  </p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to '<i class="material-icons left">edit</i>Edit'.html_safe, edit_post_path(@post), class: 'btn blue darken-2 waves-effect waves-light' %>
+<%= link_to '<i class="material-icons left">arrow_back</i>Back'.html_safe, posts_path, class: 'btn blue darken-2 waves-effect waves-light'  %>
